Bug 81946 - FILESAVE : File gets corrupt when saved as .docx
Summary: FILESAVE : File gets corrupt when saved as .docx
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Priyanka Gaikwad
URL:
Whiteboard: target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-31 06:51 UTC by Priyanka Gaikwad
Modified: 2014-09-01 08:29 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Docx with SDT content inside header (47.69 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-07-31 06:51 UTC, Priyanka Gaikwad
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Priyanka Gaikwad 2014-07-31 06:51:15 UTC
Created attachment 103727 [details]
Docx with SDT content inside header

File corrupts after RT

Steps to reproduce:
1] Open attached file in LO
2] Perform save_as
3] Open saved file in MS Office 2010 

Current behavior :
File should get open in MS Office 2010 without any corruption

Expected behavior :
RT file corrupt while opening in MS Office 2010
Comment 1 Jorendc 2014-07-31 09:07:48 UTC
Synerzip -> NEW
Comment 2 Commit Notification 2014-08-08 07:58:18 UTC
PriyankaGaikwad committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3293bfff71748af714b7dfde50476d4db86510d2

fdo#81946 Corrupt : DOCX file getting corrupt after RT



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Jorendc 2014-09-01 08:29:06 UTC
Fix applied + Unit test -> RESOLVED FIXED