fdo#81946 Corrupt : DOCX file getting corrupt after RT

Decription :
DOCX file getting corrupt after RT due to the AlternateContent inside sdtContent block

XML Difference :
In header.xml
Original File
<w:sdt>
   <w:sdtContent>
     ...
   </w:sdtContent>
</w:sdt>

Roundtrip File
<w:sdt>
   <w:sdtContent>
     <mc:AlternateContent>
       ......Text Box.....
     </mc:AlternateContent>
   </w:sdtContent>
</w:sdt>

Change-Id: I32d22f57a52060dd6f0ee784ee0002968d06ac3a